test/expected/explain_cast_aui-c17.out
explain (auto int)x
         ^
10: error: can not cast into "auto"
